--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,3 +4,23 @@ body{
     font-family: 'Open Sans', sans-serif;
     font-family: 'Roboto', sans-serif;
 }
+
+/* Debug */
+.debug{
+    background-color: red;
+    border: 1px solid black;
+}
+
+.hidden{
+    display: none !important;
+}
+
+@media screen and (min-width:992){
+    .logo-mobile{
+        display: none;
+    }
+    .hidden{
+        display: inline !important;
+    }
+    
+}
