--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,12 +27,24 @@ body{
     width: 70px;
     background-image: url(../img/sidebar-bg.png);
 }
+
+.main{
+    width: calc(100% - 70px);
+    overflow-y: auto;
+}
+
+.bg_main{
+    background-color: #1b72e8;
+}
 @media screen and (min-width:992){
     .logo-mobile{
         display: none;
     }
     .hidden{
         display: inline !important;
+    }
+    .main{
+        width: calc(100% - 150px);
     }
     
 }
